# chihiros-led-control-led-beta

./: .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.bluetooth.yml  docker-compose.yml  pyproject.toml  repository.yaml
.github/workflows/: pre-commit.yaml  release.yaml  validation.yaml
.lh/: AGENTS.md.json
.lh/docs/: doser_ctl_gepruefte_befehle.md.json  doser_stand_2026-06-19.md.json  ruckgabe.json
.lh/scripts/: Untitled-1.txt.json  [TX #1] Encode Message.txt.json
chihiros_beta/: Dockerfile  README.md  config.yaml  run.sh
chihiros_beta/ui/: chihirosctl_runner.py  index.html  server.py
custom_components/chihiros/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  debug_schema.py  discovery.py  doser_entity.py  doser_protocol.py  doser_registry.py  doser_services.py  doser_storage.py  doser_types.py  doser_watcher.py  entity.py  fake.py  fan.py  light.py  manifest.json  models.py  number.py  runtime.py  sensor.py  services.yaml  switch.py
custom_components/chihiros/common/: __init__.py  bluetooth.py  debug.py  notification_poll.py  service_runner.py  storage.py  types.py
custom_components/chihiros/core/: __init__.py  device_entries.py  plugin_devices.py
custom_components/chihiros/plugin_loader/: __init__.py  loader.py  manifest.py  registry.py
custom_components/chihiros/plugins/: README.md  __init__.py
custom_components/chihiros/www/: chihiros-doser-card-v3.js  chihiros-led-core-card.js  chihiros-notification-ui.js  chihiros-panel.js
custom_components/chihiros_doser/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/chihiros_doser/translations/: de.json  en.json
dev/homeassistant/config/: configuration.yaml
docs/: LED_CORE_SCOPE.md  architecture.md  debug  debug-add-erster-scheduler.md  debug-add-erster-scheduler.txt  esphome-protocol-findings.md  home-assistant-docker.md  led-developer-summary.md  model-power.md  protocol.md
plugin_packages/wireshark/: README.md  backend.py  build.sh  build_tgz.py
scripts/: Untitled-1.txt  [TX #1] Encode Message.txt  build_plugin_package.py  bump_core_version.py  sync_vendor.py
src/chihiros_led_control/: cli.py  client.py  const.py  debug_output.py  factory.py  models.py  protocol.py  store.py
standalone/chihiros-led-control-addons-wireshark/: README.md  plugin.json  start.sh
standalone/chihiros-led-control-addons-wireshark/www/: wireshark-plugin.js
tests/: test_addon_plugin_installer.py  test_client.py  test_debug_output.py  test_debug_schema.py  test_docs_and_wireshark_plugin.py  test_docs_contract.py  test_factory.py  test_home_assistant_integration.py  test_led_dashboard_contract.py  test_plugin_architecture.py  test_protocol.py
(+68 files in other folders)
