[build-system]
requires = [
    "setuptools==78.1.1",
    "setuptools_scm[toml]==8.2.0",
    "wheel==0.46.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "chihiros-led-control"
dynamic = ["version"]
description = "Chihiros LED control without the official vendor app"
readme = "README.md"
authors = [
    {name = "Michael Dietrich", email = "github@mi-dietrich.de"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["chihiros", "bluetooth", "lib"]

requires-python = ">=3.13"
dependencies = [
    "bleak>=2",
    "bleak-retry-connector==4.6.1",
    "click<8.2",
    "rich==13.9.4",
    "typer==0.15.2",
]

[project.optional-dependencies]
cli = [
    "click<8.2",
    "rich==13.9.4",
    "typer==0.15.2",
]

[dependency-groups]
test = [
    "pytest==9.0.3",
    "pytest-asyncio",
]
dev = [
    {include-group = "test"},
    "doc8==1.1.1",
    "pre-commit==3.7.1",
    "ruff==0.15.16",
]
ha-test = [
    {include-group = "test"},
    "aiousbwatcher",
    "homeassistant",
    "pyserial",
    "serialx[esphome]",
]

[project.urls]
"Source Code" = "https://github.com/TheMicDiet/chihiros-led-control"
"Bug Reports" = "https://github.com/TheMicDiet/chihiros-led-control/issues"
"Home-page"   = "https://github.com/TheMicDiet/chihiros-led-control"

[tool.setuptools]
platforms = ["any"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "chihiros_led_control*",
]

[tool.setuptools_scm]


[project.scripts]
chihirosctl = "chihiros_led_control.led_cli:app"

[tool.uv]
default-groups = []
environments = [
    "python_full_version >= '3.14.2'",
]
override-dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "homeassistant>=2026.6.4",
    "orjson>=3.11.9",
    "pillow>=12.2.0",
    "pyjwt>=2.13.0",
    "pyopenssl>=26.2.0",
    "urllib3>=2.7.0",
]

[tool.pytest.ini_options]
addopts = [
    "-p",
    "no:homeassistant",
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py313"
force-exclude = true
extend-exclude = [
    "custom_components/chihiros/vendor",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"chihiros_beta/ui/*.py" = ["D100", "D101", "D102", "D103", "E501"]
"scripts/*.py" = ["D100", "D103", "E501"]
"src/chihiros_led_control/*.py" = ["D107", "E501"]
"tests/test_debug_schema.py" = ["D100", "D103"]
